--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>net.fortuna</groupId>
 	<artifactId>ical4j</artifactId>
 	<name>iCal4j</name>
-	<version>1.0-beta2-SNAPSHOT</version>
+	<version>1.0-beta2</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
 	</description>
@@ -29,6 +29,7 @@
 		<connection>scm:cvs:pserver:anonymous:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j</connection>
 		<developerConnection>scm:cvs:ext:fortuna@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j</developerConnection>
 		<url>http://ical4j.cvs.sourceforge.net/ical4j</url>
+    <tag>ical4j-1_0-beta2</tag>
   </scm>
 	<contributors>
 		<contributor>
