Added debug logging for DateProperty

--- a/test/log4j.properties
+++ b/test/log4j.properties
@@ -13,6 +13,9 @@ log4j.additivity.net.fortuna.ical4j.model.TimeZoneTest=false
 log4j.logger.net.fortuna.ical4j.model.component.Observance=info, stdout
 log4j.additivity.net.fortuna.ical4j.model.component.Observance=false
 
+log4j.logger.net.fortuna.ical4j.model.property.DateProperty=debug, stdout
+log4j.additivity.net.fortuna.ical4j.model.property.DateProperty=false
+
 ## appender: stdout..
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
