Generate assembly after site to include javadocs

--- a/pom.xml
+++ b/pom.xml
@@ -229,7 +229,7 @@
 				<executions>
 					<execution>
 						<id>make-assembly</id>
-						<phase>deploy</phase>
+						<phase>post-site</phase>
 						<goals>
 							<goal>attached</goal>
 						</goals>
