--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>net.fortuna</groupId>
 	<artifactId>ical4j</artifactId>
 	<name>iCal4j</name>
-	<version>1.0-beta3</version>
+	<version>1.0-beta4-SNAPSHOT</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
 	</description>
@@ -25,14 +25,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<connection>
-			scm:cvs:pserver:anonymous:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
-		</connection>
-		<developerConnection>
-			scm:cvs:ext:fortuna@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
-		</developerConnection>
+		<connection>scm:cvs:pserver:anonymous:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j</connection>
+		<developerConnection>scm:cvs:ext:fortuna@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j</developerConnection>
 		<url>http://ical4j.cvs.sourceforge.net/ical4j</url>
-	  <tag>ical4j-1_0-beta3</tag>
   </scm>
 	<contributors>
 		<contributor>
