--- a/test/log4j.properties
+++ b/test/log4j.properties
@@ -10,7 +10,7 @@ log4j.additivity.net.fortuna.ical4j.model=false
 log4j.logger.net.fortuna.ical4j.model.TimeZoneTest=info, stdout
 log4j.additivity.net.fortuna.ical4j.model.TimeZoneTest=false
 
-log4j.logger.net.fortuna.ical4j.model.component.Observance=info, stdout
+log4j.logger.net.fortuna.ical4j.model.component.Observance=debug, stdout
 log4j.additivity.net.fortuna.ical4j.model.component.Observance=false
 
 log4j.logger.net.fortuna.ical4j.model.property.DateProperty=debug, stdout
