--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>modularity-parent</artifactId>
 		<groupId>net.modularity</groupId>
 		<version>1.0.2</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.fortuna</groupId>
+	<groupId>net.fortuna.ical4j</groupId>
 	<artifactId>ical4j</artifactId>
 	<name>iCal4j</name>
 	<version>1.0-beta5-SNAPSHOT</version>
@@ -27,10 +29,14 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:cvs:pserver:anonymous:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j</connection>
-		<developerConnection>scm:cvs:ext:fortuna@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j</developerConnection>
+		<connection>
+			scm:cvs:pserver:anonymous:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
+		</connection>
+		<developerConnection>
+			scm:cvs:ext:fortuna@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
+		</developerConnection>
 		<url>http://ical4j.cvs.sourceforge.net/ical4j/iCal4j</url>
-  </scm>
+	</scm>
 
 	<contributors>
 		<contributor>
@@ -152,6 +158,17 @@
 			</organizationUrl>
 		</contributor>
 	</contributors>
+
+	<distributionManagement>
+		<relocation>
+			<groupId>net.fortuna.ical4j</groupId>
+			<artifactId>ical4j</artifactId>
+			<version>1.0-beta5</version>
+			<message>
+				Updated group id to conform with maven standards
+			</message>
+		</relocation>
+	</distributionManagement>
 
 	<build>
 		<sourceDirectory>source</sourceDirectory>
@@ -324,10 +341,12 @@
 						<configuration>
 							<type>tag</type>
 							<tags>
-								<tag implementation="java.lang.String">
+								<tag
+									implementation="java.lang.String">
 									ical4j-1_0-beta3
 								</tag>
-								<tag implementation="java.lang.String">
+								<tag
+									implementation="java.lang.String">
 									ical4j-1_0-beta4
 								</tag>
 							</tags>
