Run unit tests in fork mode to ensure compatibility hints are not overwritten by simultaneous execution of tests

--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,7 @@
 						</property>
 						</systemProperties>
 					-->
+					<forkMode>pertest</forkMode>
 					<excludes>
 						<exclude>**/AllTests.java</exclude>
 						<exclude>**/CalendarEqualsTest.java</exclude>
