Override PMD config for Java 1.4 compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -310,12 +310,25 @@
 
 	<reporting>
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<linkXref>true</linkXref>
+					<sourceEncoding>utf-8</sourceEncoding>
+					<minimumTokens>100</minimumTokens>
+					<targetJdk>1.4</targetJdk>
+				</configuration>
+			</plugin>
+		
 			<plugin>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<configuration>
 					<configLocation>etc/checkstyle.xml</configLocation>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-clover-plugin</artifactId>
 				<configuration>
@@ -324,6 +337,7 @@
 					</licenseLocation>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>clirr-maven-plugin</artifactId>
@@ -332,6 +346,7 @@
 					<comparisonVersion>1.0-beta4</comparisonVersion>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changelog-plugin</artifactId>
